--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cv.html">CV</a></li>
-                <li><a href="Contact_Info.html">Contact Me!</a></li>
             </ul>
         </div>
     </nav>
@@ -48,7 +47,29 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 Gregg Eschelmuller. All rights reserved.</p>
+            <div class="footer-content">
+                <div class="contact-info">
+                    <h3>Contact Information</h3>
+                    <p><strong>Email:</strong> <a href="mailto:gregg.eschelmuller@ubc.ca">gregg.eschelmuller@ubc.ca</a></p>
+                    <p><strong>Alternative Email:</strong> <a href="mailto:g.eschelmuller@gmail.com">g.eschelmuller@gmail.com</a></p>
+                </div>
+                <div class="social-links">
+                    <h3>Connect with Me</h3>
+                    <div class="social-icons">
+                        <a href="https://x.com/GreggEsche" target="_blank" rel="noopener noreferrer" class="social-icon twitter">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/></svg>
+                            Twitter
+                        </a>
+                        <a href="https://scholar.google.com/citations?user=Sxvpo7YAAAAJ&hl=en" target="_blank" rel="noopener noreferrer" class="social-icon google-scholar">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M21.328 2.002v9.2M8.695 7.85c.014-.787-.11-2.236.28-2.89c.424-.71 1.26-1.01 1.98-1.18c.604-.143 1.076.223 1.47.6c.716.69.896 1.8.967 2.764c.107 1.45.176 2.908.13 4.36c-.05 1.52-.143 3.044-.224 4.564l-.004.063l1.7-3.32c1.24-2.275 2.5-4.54 3.71-6.832c.096-.082.057.124.07.18c.09 2.818.186 5.636.27 8.455c.032 1.052.047 2.108.118 3.158c.1 1.184.223 2.492.553 3.64c.414 1.44 1.24 2.425 2.778 2.596c.578.063 1.167-.02 1.738-.134"></path><path d="M5.34 16.66c-.277 1.034-.77 2.864-.832 3.11c-.054.304-.05.62-.034.928c.034.57.152 1.14.27 1.698c.26 1.158.752 2.29 1.475 3.236c.247.32.536.6.834.88M11.74 19.13c.233-.367.44-.747.626-1.143c.85-1.816 1.13-3.832 1.03-5.812c-.082-1.67-.39-3.358-1.006-4.915c-.415-1.052-.963-2.06-1.61-2.994c-.526-.747-1.116-1.448-1.762-2.095c-.714-.74-1.505-1.4-2.3-2.05c-.82-.688-1.64-1.378-2.463-2.063"></path></svg>
+                            Google Scholar
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2023 Gregg Eschelmuller. All rights reserved.</p>
+            </div>
         </div>
     </footer>
 </body>
