--- a/Contact_Info.html
+++ b/Contact_Info.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contact information and form to get in touch with Gregg Eschelmuller, PhD Student at UBC specializing in neuromechanics and motor control research.">
+    <meta name="keywords" content="Gregg Eschelmuller, UBC, neuromechanics, contact, PhD student">
+    <meta name="author" content="Gregg Eschelmuller">
     <title>Gregg Eschelmuller - Contact Me</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -32,26 +35,38 @@
                 <p><strong>Email:</strong> <a href="mailto:gregg.eschelmuller@ubc.ca">gregg.eschelmuller@ubc.ca</a></p>
                 <p><strong>Alternative Email:</strong> <a href="mailto:g.eschelmuller@gmail.com">g.eschelmuller@gmail.com</a></p>
                 <p><strong>Address:</strong> 6108 Thunderbird Blvd, Vancouver, BC V6T 2A1</p>
+                <div class="social-links">
+                    <p><strong>Connect with me:</strong></p>
+                    <ul>
+                        <li><a href="https://www.linkedin.com/in/gregg-eschelmuller" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                        <li><a href="https://scholar.google.com/citations?user=YOUR_ID" target="_blank" rel="noopener noreferrer">Google Scholar</a></li>
+                        <li><a href="https://github.com/YOUR_USERNAME" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+                    </ul>
+                </div>
             </div>
         </section>
 
         <section>
             <h2>Contact Form</h2>
             <form class="contact-form" action="#" method="POST">
-                <div>
+                <div class="form-group">
                     <label for="name">Your Name:</label>
-                    <input type="text" id="name" name="name" required>
+                    <input type="text" id="name" name="name" required aria-required="true" placeholder="Enter your name">
                 </div>
-                <div>
+                <div class="form-group">
                     <label for="email">Your Email:</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="email" required aria-required="true" placeholder="Enter your email">
                 </div>
-                <div>
+                <div class="form-group">
+                    <label for="subject">Subject:</label>
+                    <input type="text" id="subject" name="subject" required aria-required="true" placeholder="Enter message subject">
+                </div>
+                <div class="form-group">
                     <label for="message">Your Message:</label>
-                    <textarea id="message" name="message" required></textarea>
+                    <textarea id="message" name="message" required aria-required="true" placeholder="Type your message here" rows="5"></textarea>
                 </div>
-                <div>
-                    <button type="submit">Send Message</button>
+                <div class="form-group">
+                    <button type="submit" class="submit-btn">Send Message</button>
                 </div>
             </form>
         </section>
