--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <section>
             <h2>Recent Publications</h2>
             <ul>
+                <li><strong>Eschelmuller, G</strong>., Szarka, A., Gandossi, B., Inglis, J. T., & Chua, R. (2023). The effects of periodic and noisy tendon vibration on a kinesthetic targeting task. Experimental Brain Research. <a href="https://doi.org/10.1007/s00221-023-06727-1">https://doi.org/10.1007/s00221-023-06727-1</a></li>
                 <li>Grose, G., Manzone, D., <strong>Eschelmuller, G.,</strong> Peters, R., Carpenter, M.G.., Inglis, J.T., Chua, R. The effects of eccentric exercise-induced fatigue on position sense during goal-directed movement., In press Journal of Applied Physiology, <a href="https://doi.org/10.1152/japplphysiol.00177.2021">https://doi.org/10.1152/japplphysiol.00177.2021</a></li>
                 <li><strong>Eschelmuller, G.,</strong> Chua, R., Carpenter, M. G., & Inglis, J. T. (2021). The acute effects of periodic and noisy tendon vibration on wrist muscle stretch responses. Neuroscience Letters, 764, 136279. <a href="https://doi.org/10.1016/j.neulet.2021.136279">https://doi.org/10.1016/j.neulet.2021.136279</a></li>
                 <li>Mildren, R. L., Schmidt, M. E., <strong>Eschelmuller, G.,</strong> Carpenter, M. G., Blouin, J., & Inglis, J. T. (2020). Influence of age on the frequency characteristics of the soleus muscle response to Achilles tendon vibration during standing. The Journal of Physiology, 598(22), 5231-5243. <a href="https://doi.org/10.1113/jp280324">https://doi.org/10.1113/jp280324</a></li>
-                <li><strong>Eschelmuller, G.,</strong> Mildren, R. L., Blouin, J.-S., Carpenter, M. G., & Inglis, J. T. (2020). Frequency characteristics of heteronymous responses evoked by Achilles tendon vibration during quiet stance. Neuroscience Letters, 736, 135290. <a href="https://doi.org/10.1016/j.neulet.2020.135290">https://doi.org/10.1016/j.neulet.2020.135290</a></li>
             </ul>
         </section>
     </main>
