--- a/cv.html
+++ b/cv.html
@@ -52,6 +52,8 @@
             <ul>
                 <li><strong>Eschelmuller, G</strong>., Szarka, A., Inglis, J. Timothy., Chua, R., (in preparation). Investigating explicit and implicit sensorimotor adaptation in a bimanual aiming task.</li>
                 <li><strong>Eschelmuller, G</strong>., Szarka, A., Gandossi, B., Inglis, J. Timothy., Chua, R., (in preparation). Agonist/antagonist muscle tendon vibration improves performance in a visual-proprioceptive discrimination task during active but not passive movements.</li>
+                <li><strong>Eschelmuller, G.,</strong> Kim, H., Inglis, J.T., Chua, R., (in preparation). Dual agonist/antagonist produce biased end point with no change in variability in a kinesthetic targeting task. A manuscript to be submitted for publication in a peer-reviewed journal.</li>
+                <li><strong>Eschelmuller, G.,</strong> Zhang, J., Kim, H., Inglis, J.T., Chua, R., (in preparation). Kinesthetic Illusions induced through tendon vibration depend on the reliability of the proprioceptive feedback. A manuscript to be submitted for publication in a peer-reviewed journal.</li>
             </ul>
         </section>
 
@@ -63,10 +65,17 @@
                 <h3>Conference Presentations - Refereed</h3>
                 <ul>
                     <li><strong>Eschelmuller, G.,</strong> Mildren, R. L., Blouin, J. S., Carpenter, M. G., & Inglis, J. T. (2019). Heteronymous muscle responses to noisy achilles tendon vibration during standing. Journal of Exercise, Movement, and Sport (SCAPPS refereed abstracts repository), 51(1), 20-20.</li>
+                    <li><strong>Eschelmuller, G.,</strong> Mildren, R. L., Blouin, J. S., Carpenter, M. G., & Inglis, J. T. (2019). Heteronymous muscle responses to noisy achilles tendon vibration during standing. Journal of Exercise, Movement, and Sport (SCAPPS refereed abstracts repository), 51(1), 20-20.</li>
                 </ul>
         
                 <h3>Conference Abstracts - Refereed</h3>
                 <ul>
+                    <li>Butler, N., Szarka, A., <strong>Eschelmuller, G.,</strong> Wu, Z., Kim, H., & Chua, R. (2024). Effects of online vs terminal error on implicit adaptation to target jumps. Journal of Exercise, Movement, and Sport (SCAPPS refereed abstracts repository), 55(1).</li>
+                    <li>Szarka, A., <strong>Eschelmuller, G.,</strong> Butler, N., Kim, H., Inglis, J.T., Chua, R. (2024) The role of afferent vs efferent signals in implicit sensorimotor adaptation. Journal of Exercise, Movement, and Sport (SCAPPS refereed abstracts repository), 55(1)</li>
+                    <li><strong>Eschelmuller, G.,</strong> Zhang, J., Szarka, A., Butler, N.W., Kim, H., Inglis, J.T., Chua, R. (2024). The effects of agonist and antagonist muscle tendon vibration on kinesthetic targeting tasks. Society for Neuroscience, Chicago, IL.</li>
+                    <li>Szarka, A., <strong>Eschelmuller, G.,</strong> Butler, N.W., Kim, H., Inglis, J.T., Chua, R. (2024). The role of afferent vs efferent signals in implicit sensorimotor adaptation. Society for Neuroscience, Chicago, IL.</li>
+                    <li>Butler, N.W., Szarka, A., <strong>Eschelmuller, G.,</strong> Kim, H., Chua, R. (2024). Implicit adaptation to online vs terminal target error. Society for Neuroscience, Chicago, IL.</li>
+                    <li>Sutherland, K., <strong>Eschelmuller, G.,</strong> Inglis, J.T., Carpenter, M.G. (2024). The effects of postural constraints on the frequency characteristics of the stretch reflex pathways during standing. Society for Neuroscience, Chicago, IL.</li>
                     <li><strong>Eschelmuller, G</strong>., Szarka, A., Gandossi, B., Carpenter, M.G., Inglis, J. T., & Chua, R. (2023). A cautionary note on the use of suprathreshold noisy tendon vibration. Society for Neuroscience, Washington, DC.</li>
                     <li><strong>Eschelmuller, G.,</strong> Szarka, A., Inglis, J.T., Chua, R. (2023). Exploring visuomotor adaptation in a bimanual aiming task. Neural control of movement conference, Victoria, Canada.</li>
                     <li>Szarka, A., <strong>Eschelmuller, G.,</strong> Inglis, J.T., Ivry, R., Kim, H., Chua, R. (2023). Effects of vibrotactile stimulation on discrimination of visual-proprioceptive reach trajectories. Neural control of movement conference, Victoria, Canada.</li>
@@ -94,7 +103,7 @@
 
         <section class="cv-section">
             <h2>Teaching Experience</h2>
-            <p><strong>Teaching Assistant:</strong></p>
+            <h3>Teaching Assistant:</h3>
             <ul>
                 <li>KIN 411: Neuroanatomy of Human Movement (1x)</li>
                 <li>KIN 313 (389): Neuromuscular Integration of Human Movement (4x)</li>
@@ -103,12 +112,41 @@
                 <li>KIN 190: Anatomy & Physiology I (1x)</li>
                 <li>KIN 335: Advance Applications of Exercise Physiology (1x)</li>
             </ul>
+            <h3>Guest lectures</h3>
+            <ul>
+                <li><strong>Capilano University:</strong> Researcher in practice (2023, 2024)</li>
+                <li><strong>University of British Columbia:</strong> Spinal Motor Circuits - NRSC 552</li>
+            </ul>
         </section>
 
         <section class="cv-section">
             <h2>Technical Skills</h2>
-            <p><strong>Programming languages:</strong> MATLAB, Python</p>
-            <p><strong>Data collection:</strong> Proficient in various data collection and experimental techniques used in motor control and human neurophysiology research, including electromyography, force transducers, accelerometers, and force plates. Proficient in data collection software Spike2 from Cambridge Electronics Design.</p>
+            <h3>Programming languages:</h3>
+            <ul>
+                <li>MATLAB: Data analysis/visualization/experimental control</li>
+                <li>Python: Data analysis/Statistics/Computational Modeling/General Purpose</li>
+            </ul>
+            <h3>Data collection:</h3>
+            </p> Proficient in various data collection and experimental techniques used in motor control and human neurophysiology research, including electromyography, force transducers, accelerometers, and force plates. Proficient in data collection software Spike2 from Cambridge Electronics Design.</p>
+        </section>
+        <section class="cv-section">
+            <h2>Service and Mentorship</h2>
+            <p><strong>Teaching Assistant Mentor</strong></p>
+            <p>Mentored new teaching assistants in the School of Kinesiology, providing guidance on teaching strategies, course administration, and student engagement.</p>
+            <p><strong>PhD Representative, School of Kinesiology (2022–2023)</strong></p>
+            <p>Served as a liaison between PhD students and faculty, advocating for student needs and organizing academic and professional development initiatives.</p>
+            <p><strong>Informal Mentorship</strong></p>
+            <ul>
+                <li>Provided guidance to undergraduate and graduate students in the lab on experimental design, data analysis, and academic writing.</li>
+                <li>Assisted students in developing technical skills related to MATLAB and Python for data analysis in neuromechanics research.</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Other Educational Activties</h2>
+            <p><strong>2022 - Neuromatch Academy computational neuroscience summer school:</strong></p>
+            <p>I completed both the interactive track and course project. Please see the following link for a detailed description of the content. https://compneuro.neuromatch.io/tutorials/intro.html </p>
+            <p><strong>2025 – Neurotech microcredential course (in progress). </strong></p>
+            <p>Neuroscience and Neurotechnology Primer - NeuroTech Microcredential Program</p>
         </section>
     </main>
 
