--- a/cv.html
+++ b/cv.html
@@ -12,14 +12,21 @@
         <div class="container">
             <h1>Gregg Eschelmuller</h1>
             <p>PhD Student at the University of British Columbia</p>
+            <div class="header-cta">
+                <a href="mailto:gregg.eschelmuller@ubc.ca" class="btn">Contact Me</a>
+            </div>
         </div>
     </header>
 
     <nav>
         <div class="container">
-            <ul>
+            <button class="mobile-menu-toggle" aria-label="Toggle navigation menu">
+                <span></span><span></span><span></span>
+            </button>
+            <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cv.html">CV</a></li>
+                <li><a href="research.html">Research</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">
                     <svg class="sun-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
